--- a/demo/index.html
+++ b/demo/index.html
@@ -5,9 +5,7 @@
     <title>Document</title>
 
     <link rel='stylesheet' href='css/atomic-default.css' />
-    <link rel='stylesheet' media='screen and (min-width: 482px) and (max-width: 700px)' href='css/atomic-small.css' />
-    <link rel='stylesheet' media='screen and (min-width: 701px) and (max-width: 1025px)' href='css/atomic-medium.css' />
-    <link rel='stylesheet' media='screen and (min-width: 1026px)' href='css/atomic-large.css' />
+    <script src="js/load-css.js"></script>
 
 </head>
 <body>
