--- a/demo/load-via-css.html
+++ b/demo/load-via-css.html
@@ -5,9 +5,9 @@
     <title>Document</title>
 
     <link rel='stylesheet' href='css/atomic-default.css' />
-    <link rel='stylesheet' href='css/atomic-small.css' media='screen and (min-width: 481px)'>
-    <link rel='stylesheet' href='css/atomic-medium.css' media='screen and (min-width: 701px)'>
-    <link rel='stylesheet' href='css/atomic-large.css' media='screen and (min-width: 1026px)'>
+    <link rel='stylesheet' href='css/atomic-small.css' media='only screen and (min-width: 481px)'>
+    <link rel='stylesheet' href='css/atomic-medium.css' media='only screen and (min-width: 701px)'>
+    <link rel='stylesheet' href='css/atomic-large.css' media='only screen and (min-width: 1026px)'>
 
 
 </head>
