--- a/demo-purify/index.html
+++ b/demo-purify/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <title>Document</title>
 
-    <link rel='stylesheet' href='css/atomic-default.css' />
-    <script src="js/load-css.js"></script>
+    <link rel='stylesheet' href='css/atomic.css' />
 
 </head>
 <body>
 
-    hello.
+    <div class="ma4 bg-gray">hi</div>
 
 </body>
 </html>
